<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black" >

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/Dining_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/Dining"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Entertainment_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/Entertainment"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Hotel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/Hotel"
            android:textSize="25sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/Banking_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/Bankings"
            android:textSize="25sp" />

        <Button
            android:id="@+id/Miscellaneous_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/Miscellaneous"
            android:textSize="25sp" />

        <Button
            android:id="@+id/AllPerks_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/AllPerks"
            android:textSize="25sp" />
    </TableRow>

</TableLayout>